<resources>
    <string name="app_name">ConnectProject</string>
    <string name="firstname">Firstname</string>
    <string name="lastname">Lastname</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="age">Age</string>
    <string name="phone">Phone</string>
    <string name="login">Login</string>
    <string name="signup">Sign up</string>
    <string name="logoutButton">Logout</string>
    <string name="change_mail">Change Mail</string>
    <string name="change_password">Change Password</string>
    <string name="schedule">Schedule</string>
    <string name="change_phone">Change Number</string>
</resources>