<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?android:attr/colorPrimary"
    tools:context=".SignupActivity">

    <ImageView
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:id="@+id/signupImage"
        android:src="@drawable/logo"
        android:layout_marginTop="5dp"
        app:layout_constraintCircleRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:strokeWidth="10dp"
        app:strokeColor="@android:color/darker_gray"
        app:shapeAppearanceOverlay="@style/circleImageView">

    </ImageView>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:id="@+id/signupFirstname"
        android:hint="@string/firstname"
        android:imeOptions="actionNext"
        android:padding="12dp"
        android:layout_marginTop="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/signupImage">

    </EditText>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:id="@+id/signupLastname"
        android:hint="@string/lastname"
        android:imeOptions="actionNext"
        android:padding="12dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/signupFirstname">

    </EditText>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:id="@+id/signupEmail"
        android:hint="@string/email"
        android:imeOptions="actionNext"
        android:inputType="textEmailAddress"
        android:padding="12dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/signupLastname">

    </EditText>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:id="@+id/signupPassword"
        android:hint="@string/password"
        android:imeOptions="actionNext"
        android:inputType="textPassword"
        android:padding="12dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/signupEmail">

    </EditText>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:id="@+id/signupAge"
        android:hint="@string/age"
        android:inputType="number"
        android:digits="0123456789"
        android:padding="12dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/signupPassword">

    </EditText>

    <ToggleButton
        android:layout_width="275dp"
        android:layout_height="wrap_content"
        android:id="@+id/signupTeacher"
        android:textOff="Student"
        android:textOn="Teacher"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/signupAge">

    </ToggleButton>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:id="@+id/signupPhone"
        android:hint="@string/phone"
        android:inputType="number"
        android:digits="0123456789"
        android:padding="12dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/signupTeacher">

    </EditText>

    <Button
        android:layout_width="275dp"
        android:layout_height="wrap_content"
        android:id="@+id/signupButton"
        android:text="@string/signup"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/signupPhone">

    </Button>

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/loginRedirect"
        android:text="Already registered? Login"
        android:textSize="15sp"
        android:gravity="center"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/signupButton">

    </TextView>

</androidx.constraintlayout.widget.ConstraintLayout>