<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity">


        <ImageView
            android:id="@+id/profile_image"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_margin="16dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/profile_placeholder"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/profile_button"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:background="#00FFFFFF"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/profile_image" />

        <Button
            android:id="@+id/logoutButton"
            android:layout_width="275dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="60dp"
            android:text="@string/logoutButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/change_mail">

        </Button>

        <Button
            android:id="@+id/change_mail"
            android:layout_width="275dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:text="@string/change_mail"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/change_password">

        </Button>

        <Button
            android:id="@+id/change_password"
            android:layout_width="275dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:text="@string/change_password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/change_phone">

        </Button>

        <Button
            android:id="@+id/schedule"
            android:layout_width="275dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:text="@string/schedule"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profile_button">

        </Button>

        <Button
            android:id="@+id/change_phone"
            android:layout_width="275dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:text="@string/change_phone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/schedule">

        </Button>


</androidx.constraintlayout.widget.ConstraintLayout>