<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?android:attr/colorPrimary"
    tools:context=".LoginActivity">

    <ImageView
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:id="@+id/loginImage"
        android:src="@drawable/logo"
        android:layout_marginTop="5dp"
        app:layout_constraintCircleRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:strokeWidth="10dp"
        app:strokeColor="@android:color/darker_gray"
        app:shapeAppearanceOverlay="@style/circleImageView">

    </ImageView>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:id="@+id/loginEmail"
        android:hint="@string/email"
        android:imeOptions="actionNext"
        android:inputType="textEmailAddress"
        android:padding="12dp"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/loginImage">

    </EditText>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:id="@+id/loginPassword"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:imeOptions="actionNext"
        android:padding="12dp"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/loginEmail">

    </EditText>

    <Button
        android:backgroundTint="@color/black_gray"
        android:layout_width="275dp"
        android:layout_height="wrap_content"
        android:id="@+id/loginButton"
        android:text="@string/login"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/loginPassword">

    </Button>

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/signupRedirect"
        android:text="Don't have an account? Sign up"
        android:textSize="15sp"
        android:gravity="center"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/loginButton">

    </TextView>

</androidx.constraintlayout.widget.ConstraintLayout>